2006-11-09  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scheme-wrapper.c (marshall_proc_db_call): Use
	vectors instead of the non-standard array structure. Also made some
	minor coding style changes in the file.

	* plug-ins/script-fu/tinyscheme/opdefines.h
	* plug-ins/script-fu/tinyscheme/scheme-private.h
	* plug-ins/script-fu/tinyscheme/scheme.h
	* plug-ins/script-fu/tinyscheme/scheme.c: Removed all code related
	to the handling of the non-standard array structure. Added one small
	change to scheme.c to fix problems compiling with MSVC in Windows.

	* plug-ins/script-fu/scripts/script-fu-compat.init: Changed array
	references to use vector references.

2006-11-09  Michael Natterer  <mitch@gimp.org>

	* plug-ins/rcm/rcm.c
	* plug-ins/rcm/rcm_misc.c: fix warning about missing declaration
	and did some code shuffling and cleanup.

2006-11-09  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c: Moved too much. Moved some
	array declarations out of here...

	* plug-ins/script-fu/tinyscheme/scheme-private.h: and back to here.

2006-11-09  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme-private.h: Moved various
	declarations and defines out of here...

	* plug-ins/script-fu/tinyscheme/scheme.c: and added them here in
	keeping with the original 1.38 version of TinyScheme. Only include
	unistd.h if it exists.

	* plug-ins/script-fu/ftx/ftx.c: Only include unistd.h if it exists.

2006-11-09  Michael Natterer  <mitch@gimp.org>

	Properly abstract brush scaling:

	* app/core/gimpbrush.[ch]: added virtual functions
	GimpBrush::scale_mask() and ::scale_pixmap() and default
	implementations which call the functions in base/brush-scale.c.

	* app/core/gimpbrushgenerated.c: factored out brush calculation to
	an internal utility function and call that function from ::dirty()
	and from the new ::scale_mask().

	* app/core/gimpbrushcore.c: use gimp_brush_scale_mask/pixmap()